@@ -1,0 +1,3 @@
+.idea
+*.pyc
+*.pyo
